--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/components/room-card/template/room-card.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/components/room-card/template/room-card.html
@@ -4,7 +4,7 @@
 	<div class="card-header">
 		<div class="section1">
 			<div class="room-number clickable" (click)="openRoomModal()">{{ roomVM.name }}</div>
-			<div class="room-details">{{ roomVM.categoryLabel }}</div>
+			<div class="room-type">{{ roomVM.categoryLabel }}</div>
 		</div>
 		<div class="section2 flex-row flex-jc-sb">
 			<div class="customer-name clickable" (click)="openCustomerModal()">{{ roomVM.customerName }}</div>
@@ -34,7 +34,7 @@
 	<div class="card-header">
 		<div class="section1">
 			<div class="room-number clickable" (click)="openRoomModal()">{{ roomVM.name }}</div>
-			<div class="room-details">{{ roomVM.categoryLabel }}</div>
+			<div class="room-type">{{ roomVM.categoryLabel }}</div>
 		</div>
 		<div class="section2 flex-row flex-jc-sb">
 			<div class="customer-name clickable"></div>
@@ -61,7 +61,7 @@
 	<div class="card-header">
 		<div class="section1">
 			<div class="room-number clickable" (click)="openRoomModal()">{{ roomVM.name }}</div>
-			<div class="room-details">{{ roomVM.categoryLabel }}</div>
+			<div class="room-type">{{ roomVM.categoryLabel }}</div>
 		</div>
 		<div class="section2 flex-row flex-jc-sb">
 			<div class="customer-name clickable"></div>
@@ -87,7 +87,7 @@
 	<div class="card-header">
 		<div class="section1">
 			<div class="room-number clickable" (click)="openRoomModal()">{{ roomVM.properties.name }}</div>
-			<div class="room-details">{{ roomVM.roomCategory.displayName }}</div>
+			<div class="room-type">{{ roomVM.roomCategory.displayName }}</div>
 		</div>
 		<div class="section2 flex-row flex-jc-sb">
 			<div class="customer-name clickable"></div>
