--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -644,8 +644,8 @@ lazy-loading-table {
 .btn-green:active,
 .btn-green:visited,
 .btn-green:focus {
-    background-color: #5CB85C !important;
-    border-color: #5CB85C !important;
+    background-color: #1dcd8c !important;
+    border-color: #1dcd8c !important;
     color: white;
 }
 
@@ -903,15 +903,15 @@ td .room-categ-capacity {
 }
 
 .yellow {
-    background: #D1D100;
+    background: #ffbe01;
 }
 
 .green {
-    background: #5CB85C;
+    background: #1dcd8c;
 }
 
 .green-color {
-    color: #5CB85C;
+    color: #1dcd8c;
 }
 
 .blue {
@@ -919,11 +919,11 @@ td .room-categ-capacity {
 }
 
 .gray {
-    background: #7F8C8D; /* Should we change this color?*/
+    background: #bbbbbb;
 }
 
 .gray-color {
-    color: #808080;
+    color: #bbbbbb;
 }
 
 .brown {
@@ -935,7 +935,7 @@ td .room-categ-capacity {
 }
 
 .orange {
-    background: #F0AD4E;
+    background: #fb6708;
 }
 
 .orange-color{
@@ -2018,16 +2018,33 @@ a.btn.btn-square:focus {
     .hotel-operations-dashboard .pane {
         display: flex;
         background-color: #f3f3f3;
-        flex-basis: 225px;
+        flex-basis: 236px;
         flex-direction: column;
         flex-grow: 0;
     }
 
     .hotel-operations-dashboard .pane > .header{
-        height: 118px;
         border-bottom: 1px solid #DBDBDB;
     }
 
+    .hotel-operations-dashboard .customer-name{
+        font-size: 16px;
+        color: #7c7c81;
+        cursor: pointer;
+    }
+
+    .hotel-operations-dashboard .room-type{
+        font-size: 12px;
+        color: #a9a9ac;  
+    }
+
+    .hotel-operations-dashboard .period{
+            display: flex;
+            flex-direction: row;
+            color: #7c7c81
+        }
+
+    
         
         .hotel-operations-dashboard .pane > .header{
             display: flex;
@@ -2039,7 +2056,8 @@ a.btn.btn-square:focus {
             align-items: center;
             border-bottom: 1px solid #DBDBDB;
             padding-left: 15px;
-            flex-basis: 70px;
+            flex-basis: 48px;
+            color: #5b5b62;
         }
 
         .hotel-operations-dashboard .pane-search-bar{
@@ -2079,6 +2097,14 @@ a.btn.btn-square:focus {
             color: #fb6708;
         }
 
+    .hotel-operations-dashboard .rooms-filter {
+        color: #7c7c81;
+    }
+
+    .rooms-controller {
+        color: #5b5b62;
+    }
+
     rooms-canvas {
         background-color: #eeeeee;
         flex-basis: 100px;
@@ -2092,12 +2118,12 @@ a.btn.btn-square:focus {
     }
 
     rooms-canvas > .header > .rooms-controller{
-        height: 70px;
+        height: 48px;
         background-color: white;
         border-bottom: 1px solid #DBDBDB;
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: center;
     }
 
     rooms-canvas > .header > .notification{
@@ -2135,11 +2161,11 @@ a.btn.btn-square:focus {
 
         /* Free */
         .room-card.free {
-            border-left: 6px solid #5cb85c;
+            border-left: 6px solid #1dcd8c;
         }
     
         .room-card.free .card-header .section1 .room-number{
-            color: #5cb85c;  
+            color: #1dcd8c;  
         }
 
         /*Out of service */
@@ -2153,11 +2179,11 @@ a.btn.btn-square:focus {
 
         /* Reseved */
         .room-card.reserved {
-            border-left: 6px solid #ffec40;
+            border-left: 6px solid #ffbe01;
         }
     
         .room-card.reserved .card-header .section1 .room-number{
-            color: #ffec40;
+            color: #ffbe01;
         }
 
         .page{
@@ -2203,11 +2229,11 @@ a.btn.btn-square:focus {
         }
 
         .room-card.free.tick-border{
-            border-color: #5cb85c;
+            border-color: #1dcd8c;
         }
 
         .room-card.reserved.tick-border{
-            border-color: #ffec40;
+            border-color: #ffbe01;
         }
 
         .room-card .card-header{
@@ -2224,19 +2250,10 @@ a.btn.btn-square:focus {
                 font-size: 24px;
             }
 
-            .room-card .card-header .section1 .room-details{
-                font-size: 12px;
-                color: #b9b9b9;  
-            }
-            
         .room-card .card-header .section2{
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-        }
-
-        .room-card .card-header .section2 .customer-name{
-            font-size: 16px;
         }
 
         .rooms-canvas {
@@ -2260,11 +2277,6 @@ a.btn.btn-square:focus {
             padding: 6px 12px 6px 12px;
             height: 33px;
             font-size: 11px;
-        }
-
-        .room-card.card-footer .period{
-            display: flex;
-            flex-direction: row;
         }
 
         .room-card .card-footer .period > i{
@@ -2304,11 +2316,6 @@ a.btn.btn-square:focus {
             font-size: 16px;
         }
 
-        .room-type {
-            font-size: 12px;
-            color: #999;
-        }
-
         arrival-item .body .period {
             font-size: 11px;
             align-items: center;
@@ -2328,7 +2335,6 @@ a.btn.btn-square:focus {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            font-weight: bold;
         }
 
         arrival-item .footer{
@@ -2381,11 +2387,6 @@ a.btn.btn-square:focus {
             font-size: 16px;
         }
 
-        departure-item .body .room-type {
-            font-size: 0px;
-            color: #999;
-        }
-
         departure-item .body .period {
             font-size: 11px;
             align-items: center;
@@ -2401,7 +2402,7 @@ a.btn.btn-square:focus {
             justify-content: space-between;
         }
 
-        departure-item .booking-quick-details .period{
+        departure-item .booking-quick-details .stats{
             display: flex;
             flex-direction: row;
             justify-content: space-between;
@@ -2466,7 +2467,7 @@ a.btn.btn-square:focus {
         }
 
         .stat-yellow{
-            background-color: #ffec40;
+            background-color: #ffbe01;
             color: white;
         }
 
@@ -2930,7 +2931,7 @@ a.btn.btn-square:focus {
     color: #C44D00;
 }
 .reserved-booking kbd {
-    background-color: #ffec40;
+    background-color: #ffbe01;
     color: black;
 }
 .checked-in kbd {
