--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/departures-pane/components/departure-item/template/departure-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/departures-pane/components/departure-item/template/departure-item.html
@@ -1,13 +1,12 @@
 <div *ngIf="departureItemVM.isStayingInRoom">
 	<div class="header">
 		<span class="clickable"><b class="green-color" (click)="openRoomModal()">{{departureItemVM.roomName}}</b></span>
-		<span class="clickable" (click)="openCustomerModal()">{{departureItemVM.customerName}}</span>
-		<div class="room-type">{{ departureItemVM.roomCategoryLabel}}</div>
+		<span class="customer-name" (click)="openCustomerModal()">{{departureItemVM.customerName}}</span>
 	</div>
 	<div class="body">
 		<div class="room-type">{{departureItemVM.roomCategoryLabel}}</div>
 		<div class="booking-quick-details">
-			<div class="period orange-color f-12">
+			<div class="stats orange-color f-12">
 				<span class="unitpal-font clickable f-12 p-r-6">-</span><span>203 euro</span>
 			</div>
 			<div class="other-details gray-color f-12">
