[T241] Integrated no show time editor on front end

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
@@ -5,6 +5,9 @@
 		<div class="row">
 			<booking-period-editor [bookingOperationsPageData]="bookingOperationsPageData" (onBookingPeriodChanged)="didChangeBooking($event)"></booking-period-editor>
 		</div>
+		<div class="row">
+			<booking-no-show-editor [bookingOperationsPageData]="bookingOperationsPageData" (onBookingNoShowTimestampChanged)="didChangeBooking($event)"></booking-no-show-editor>
+		</div>
 
 		<div class="row">
 			<div class="col-xs-12 col-sm-1 padding-top-10px">
