--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
@@ -14,7 +14,7 @@
 				{{'Status' | translate}}
 			</div>
 			<div class="col-xs-12 col-sm-4">
-            <div class="form-group">
+            	<div class="form-group">
 					<div class="form-control operational-input-group non-editable" [ngClass]="bookingMeta.displayClassName">
 						<span class="unitpal-font unitpal-large">{{ bookingMeta.fontName }}</span>
 						<span class="name">{{ bookingMeta.displayName | translate }}</span>
@@ -22,6 +22,20 @@
 				</div>
 			</div>
 		</div>
+
+		<hr/>
+		<div class="row">
+			<div class="col-xs-12 col-sm-1 padding-top-10px">
+				{{'Room' | translate}}
+			</div>
+			<div class="col-xs-12 col-sm-4">
+				<div class="row padding-bottom-5px">
+					<booking-room-editor [bookingOperationsPageData]="bookingOperationsPageData" (onBookingRoomChanged)="didChangeRoomForBooking($event)"></booking-room-editor>
+				</div>
+			</div>
+
+		</div>
+		<hr/>
 
 		<div class="row padding-bottom-10px">
 			<div class="col-xs-12 col-sm-1 padding-top-10px">
