- Date navigations - Search arrivals and departures - CSS updates

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/arrivals-pane/components/arrival-item/template/arrival-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/arrivals-pane/components/arrival-item/template/arrival-item.html
@@ -1,5 +1,5 @@
 <div class="left">
-	<span class="unitpal-font f-16">I</span>
+	<span class="unitpal-font f-32">I</span>
 </div>
 <div class="right p-6">
 	<div class="header" >
@@ -14,8 +14,10 @@
 				<div class="end-date">{{arrivalItemVM.departureLabel}}</div>
 			</div>
 			<div class="other-details gray-color f-12">
-				<span class="unitpal-font f-12">(</span> {{arrivalItemVM.numberOfPeople}}
-				<span class="unitpal-font f-12">Y</span> {{arrivalItemVM.numberOfNights}}
+				<div>
+					<span class="unitpal-font f-12">(</span> {{arrivalItemVM.numberOfPeople}}
+					<span class="unitpal-font f-12">Y</span> {{arrivalItemVM.numberOfNights}}
+				</div>
 			</div>
 		</div>
 	</div>
