--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/components/room-card/template/room-card.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/components/room-card/template/room-card.html
@@ -22,8 +22,10 @@
 			<div class="end-date">{{ roomVM.departureLabel }}</div>
 		</div>
 		<div class="other-details gray-color flex-row flex-center-v f-12">
-			<span class="unitpal-font f-12">(</span> {{roomVM.numberOfPeople}}
-			<span class="unitpal-font f-12">Y</span> {{roomVM.numberOfNights}}
+			<div>
+				<span class="unitpal-font f-12">(</span> {{roomVM.numberOfPeople}}
+				<span class="unitpal-font f-12">Y</span> {{roomVM.numberOfNights}}
+			</div>
 		</div>
 	</div>
 </div>
