--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/arrivals-pane/template/arrivals-pane.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/arrivals-pane/template/arrivals-pane.html
@@ -4,18 +4,18 @@
 			<span class="unitpal-font orange-color p-r-12 f-32">/</span>
 			<div>
 				<span class="f-12">Arrivals</span>
-				<span class="current-date f-16"><b>13.01.2016</b></span>			
+				<span class="current-date f-16"><b>{{getDayShortString()}}</b></span>			
 			</div>
 		<span class="unitpal-font f-12 p-r-12 f-32 clickable" (click)="nextDay()">&gt;</span>
 	</div>
 	<div class="pane-search-bar">
-		<input class="remove-auto-border" type="text" placeholder="Search here">
+		<input class="remove-auto-border" type="text" placeholder="Search here" [ngModel]="searchText" (ngModelChange)="searchTextChangeHandler($event)">
 		<i class="fa fa-search gray-color p-l-6"></i>
 	</div>
 </div>
 <div class="body">
 	<arrival-item
-		*ngFor="let arrivalItemVM of arrivalItemsVMList"
+		*ngFor="let arrivalItemVM of filteredArrivalsVMList"
 		[ngClass]="{'selected': isArrivalItemSelected(arrivalItemVM)}" 
 		[arrivalItemVM] = "arrivalItemVM" 
 		(click) = "selectArrivalItem(arrivalItemVM)"
