--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/departures-pane/components/departure-item/template/departure-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/departures-pane/components/departure-item/template/departure-item.html
@@ -7,11 +7,15 @@
 		<div class="room-type">{{departureItemVM.roomCategoryLabel}}</div>
 		<div class="booking-quick-details">
 			<div class="stats orange-color f-12">
+				<div>
 				<span class="unitpal-font clickable f-12 p-r-6">-</span><span>203 euro</span>
+				</div>
 			</div>
 			<div class="other-details gray-color f-12">
-				<span class="unitpal-font f-12">(</span> <span>{{departureItemVM.numberOfPeople}}</span>
-				<span class="unitpal-font f-12">Y</span> <span>{{departureItemVM.numberOfNights}}</span>
+				<div>
+					<span class="unitpal-font f-12">(</span> <span>{{departureItemVM.numberOfPeople}}</span>
+					<span class="unitpal-font f-12">Y</span> <span>{{departureItemVM.numberOfNights}}</span>
+				</div>
 			</div>
 		</div>
 	</div>
