--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/departures-pane/template/departures-pane.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/departures-pane/template/departures-pane.html
@@ -4,20 +4,20 @@
 			<span class="unitpal-font green-color p-r-12 f-32">.</span>
 			<div>
 				<span class="f-12">Departures</span>
-				<span class="current-date f-16"><b>13.01.2016</b></span>			
+				<span class="current-date f-16"><b>{{selectedDate}}</b></span>			
 			</div>
 		<span class="unitpal-font f-12 p-r-12 f-32 clickable" (click)="nextDay()">&gt;</span>
 	</div>
 
 	<div class="pane-search-bar">
-		<input class="remove-auto-border" type="text" placeholder="Search here">
+		<input class="remove-auto-border" type="text" placeholder="Search here" [ngModel]="searchText" (ngModelChange)="searchTextChangeHandler($event)">
 		<i class="fa fa-search gray-color p-l-6"></i>
 	</div>
 
 </div>
 <div class="body">
 	<departure-item
-		*ngFor="let departureItemVM of departureItemsVMList"
+		*ngFor="let departureItemVM of filteredDeparturesVMList"
 		[ngClass]="{'selected': isDepartureItemSelected(departureItemVM)}" 
 		[departureItemVM] = "departureItemVM" 
 		(click) = "selectDepartureItem(departureItemVM)">
