[T241] change booking capacity

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
@@ -33,6 +33,9 @@
 					<booking-room-editor [bookingOperationsPageData]="bookingOperationsPageData" (onBookingRoomChanged)="didChangeRoomForBooking($event)"></booking-room-editor>
 				</div>
 			</div>
+			<div class="col-xs-12 col-sm-7">
+				<booking-capacity-editor [bookingOperationsPageData]="bookingOperationsPageData" (onBookingCapacityChanged)="didChangeBooking($event)"></booking-capacity-editor>
+			</div>
 
 		</div>
 		<hr/>
