--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/departures-pane/template/departures-pane.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/departures-pane/template/departures-pane.html
@@ -1,12 +1,14 @@
 <div class="header">
-	<div class="pane-title">
-		<span class="unitpal-font f-12 p-r-12 f-32 clickable" (click)="previousDay()">&lt;</span>
+	<div class="pane-title p-t-6">
+		<div class="unitpal-font f-12 f-32 clickable" (click)="previousDay()">&lt;</div>
+		<div class="flex-row">
 			<span class="unitpal-font green-color p-r-12 f-32">.</span>
 			<div>
-				<span class="f-12">Departures</span>
-				<span class="current-date f-16"><b>{{selectedDate}}</b></span>			
+				<div class="f-12">Departures</div>
+				<div class="current-date f-16"><b>{{getDateShortString()}}</b></div>			
 			</div>
-		<span class="unitpal-font f-12 p-r-12 f-32 clickable" (click)="nextDay()">&gt;</span>
+		</div>
+		<div class="unitpal-font f-12 p-r-12 f-32 clickable" (click)="nextDay()">&gt;</div>
 	</div>
 
 	<div class="pane-search-bar">
