--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -891,7 +891,7 @@ td .room-categ-capacity {
 }
 
 .white {
-    background: white;
+    background: white !important;
 }
 
 .red {
@@ -904,6 +904,10 @@ td .room-categ-capacity {
 
 .yellow {
     background: #ffbe01;
+}
+
+.yellow-color {
+    color: #ffbe01;
 }
 
 .green {
@@ -2057,6 +2061,7 @@ a.btn.btn-square:focus {
         .hotel-operations-dashboard .header .pane-title{
             display: flex;
             align-items: center;
+            justify-content: space-between;
             border-bottom: 1px solid #DBDBDB;
             padding-left: 15px;
             flex-basis: 48px;
@@ -2289,10 +2294,10 @@ a.btn.btn-square:focus {
 
         /* Arrivals Pane */
 
-        arrival-item {
+        arrival-item > div{
             cursor: default;
             background-color: #f3f3f3;
-            border-bottom: 1px solid #f3f3f3;
+            border: 1px solid #dbdbdb;
             display: flex;
             flex-direction: row;
         }
@@ -2302,19 +2307,25 @@ a.btn.btn-square:focus {
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            border-right: 1px solid #dbdbdb;
+            width: 13px;
+        }
+
+        arrival-item .left.can-check-in{
             color: #ccc;
             background-color: #949494;
         }
 
-        arrival-item .left>span {
+        arrival-item .left.can-check-in > span {
             text-shadow: 1px 1px #5b5b62;
         }
 
         arrival-item .right{
             flex-grow: 1;
+            padding: 6px 6px 0px 6px;
         }
 
-        arrival-item.selected {
+        arrival-item.selected > div {
             background-color: white;
         }
 
@@ -2350,7 +2361,6 @@ a.btn.btn-square:focus {
 
         arrival-item.selected .footer{
             display: flex;
-            justify-content: flex-end;
             align-items: center;
             border-top: 1px solid #999;
             height: 30px;
@@ -2449,10 +2459,13 @@ a.btn.btn-square:focus {
             cursor: pointer;
         }
 
+        .clickable:hover{
+            opacity: 0.5
+        }
+
         .flex-row {
             display: flex;
             flex-direction: row;
-            /*align-items: center;*/
         }
 
         .flex-center-v{
@@ -2460,7 +2473,15 @@ a.btn.btn-square:focus {
         }
 
         .flex-jc-sb{
-            justify-content: space-between;
+            justify-content: space-between !important;
+        }
+
+        .flex-jc-start{
+            justify-content: flex-start !important;
+        }
+
+        .flex-jc-end{
+            justify-content: flex-end !important;
         }
 
         .circle-sm {
