--- a/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-preview/template/room-preview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-preview/template/room-preview.html
@@ -75,7 +75,7 @@
             <p>{{'Notes' | translate}}</p>
         </div>
         <div class="col-xs-12 col-sm-11 field-value text-field">
-            <p>{{roomVM.room.notes}}</p>
+            <p class="notes">{{roomVM.room.notes}}</p>
         </div>
     </div>
     <hr/>
