--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
@@ -26,7 +26,6 @@
 		<div class="row">
 			<booking-payment-guarantee-editor [bookingOperationsPageData]="bookingOperationsPageData" (onBookingPaymentGuaranteeChanged)="didChangeBooking($event)"></booking-payment-guarantee-editor>
 		</div>
-
 		<hr/>
 		<div class="row">
 			<div class="col-xs-12 col-sm-1 padding-top-10px">
@@ -40,7 +39,10 @@
 			<div class="col-xs-12 col-sm-7">
 				<booking-capacity-editor [bookingOperationsPageData]="bookingOperationsPageData" (onBookingCapacityChanged)="didChangeBooking($event)"></booking-capacity-editor>
 			</div>
-
+		</div>
+		<hr/>
+		<div class="row padding-top-5px">
+			<booking-details-editor [bookingOperationsPageData]="bookingOperationsPageData" (onBookingDetailsChanged)="didChangeBooking($event)"></booking-details-editor>
 		</div>
 		<hr/>
 
