--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/price-product-view/template/booking-price-product-viewer.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/price-product-view/template/booking-price-product-viewer.html
@@ -20,6 +20,10 @@
 </div>
 
 <div class="col-xs-12 col-sm-offset-1 col-sm-11 field-value text-field padding-top-5px">
+    <p class="notes"><i class="fa unitpal-font" title="{{ 'Room Category' | translate }}">@</i> {{ roomCategoryName }}</p>
+</div>
+
+<div class="col-xs-12 col-sm-offset-1 col-sm-11 field-value text-field">
     <p class="notes"><i class="fa fa-calendar-check-o" title="{{ 'Conditions' | translate }}"></i> {{ conditionsString }}</p>
 </div>
 
