--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/arrivals-pane/template/arrivals-pane.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/arrivals-pane/template/arrivals-pane.html
@@ -5,7 +5,7 @@
 			<span class="unitpal-font orange-color p-r-12 f-32">/</span>
 			<div class="">
 				<div class="f-12">Arrivals</div>
-				<div class="current-date f-16"><b>{{getDateShortString()}}</b></div>
+				<div *ngIf="selectedDate" class="current-date f-16"><b>{{getDateShortString()}}</b></div>
 			</div>
 		</div>
 		<div class="unitpal-font f-12 p-r-12 f-32 clickable" (click)="nextDay()">&gt;</div>
@@ -15,7 +15,7 @@
 		<i class="fa fa-search gray-color p-l-6"></i>
 	</div>
 </div>
-<div class="body">
+<div customScroll class="body">
 	<arrival-item
 		*ngFor="let arrivalItemVM of filteredArrivalsVMList"
 		[ngClass]="{'selected': isArrivalItemSelected(arrivalItemVM)}" 
@@ -26,6 +26,33 @@
 		>
 	</arrival-item>
 
+	<arrival-item
+		*ngFor="let arrivalItemVM of filteredArrivalsVMList"
+		[ngClass]="{'selected': isArrivalItemSelected(arrivalItemVM)}" 
+		[arrivalItemVM] = "arrivalItemVM" 
+		(click) = "selectArrivalItem(arrivalItemVM)"
+		(startedDragging)="startedDragging($event)"
+		(stoppedDragging)="stoppedDragging($event)"
+		>
+	</arrival-item>
+		<arrival-item
+		*ngFor="let arrivalItemVM of filteredArrivalsVMList"
+		[ngClass]="{'selected': isArrivalItemSelected(arrivalItemVM)}" 
+		[arrivalItemVM] = "arrivalItemVM" 
+		(click) = "selectArrivalItem(arrivalItemVM)"
+		(startedDragging)="startedDragging($event)"
+		(stoppedDragging)="stoppedDragging($event)"
+		>
+	</arrival-item>
+		<arrival-item
+		*ngFor="let arrivalItemVM of filteredArrivalsVMList"
+		[ngClass]="{'selected': isArrivalItemSelected(arrivalItemVM)}" 
+		[arrivalItemVM] = "arrivalItemVM" 
+		(click) = "selectArrivalItem(arrivalItemVM)"
+		(startedDragging)="startedDragging($event)"
+		(stoppedDragging)="stoppedDragging($event)"
+		>
+	</arrival-item>	
 </div>
 <div class="footer">
 	<div class="arrivals-side-pane-bottom-box">
