--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -2022,6 +2022,10 @@ a.btn.btn-square:focus {
         width: 100%;
         height: 100%;
         overflow-y: hidden;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        cursor: default;
     }
 
     .hotel-operations-dashboard{
@@ -2105,6 +2109,7 @@ a.btn.btn-square:focus {
         }
 
         .pane > .body{
+            height: 100px;
             flex-grow: 1;
         }
 
@@ -2160,7 +2165,11 @@ a.btn.btn-square:focus {
         flex-grow: 0;
         padding: 12px;
     }
-    
+
+    rooms-canvas .body {
+        overflow-y: hidden;
+        height: calc(100% - 49px);
+    }
 
         /* Room cards */
         
@@ -2228,8 +2237,8 @@ a.btn.btn-square:focus {
             border-bottom: 2px solid #b9b9b9;
         }
 
-        .room-card.ghost{
-            opacity: 0.65
+        .ghost{
+            opacity: 0.5
         }
 
         .room-card.accepts-drop{
@@ -2300,6 +2309,9 @@ a.btn.btn-square:focus {
 
 
         /* Arrivals Pane */
+        arrival-item{
+            display: block;
+        }
 
         arrival-item > div{
             cursor: default;
@@ -2316,6 +2328,10 @@ a.btn.btn-square:focus {
             justify-content: center;
             border-right: 1px solid #dbdbdb;
             width: 13px;
+        }
+
+        arrival-item .right:hover{
+            background-color: #fafafa;
         }
 
         arrival-item .left.can-check-in{
@@ -2344,6 +2360,10 @@ a.btn.btn-square:focus {
         arrival-item .header{
             padding-top: 10px;
             font-size: 16px;
+        }
+
+        arrival-item .body{
+            overflow-y: hidden;
         }
 
         arrival-item .body .period {
@@ -2402,23 +2422,34 @@ a.btn.btn-square:focus {
         }
 
         /* Departures Pane */
-
         departure-item {
+            display: block;
+        }
+
+        departure-item > div {
             cursor: default;
             background-color: #f3f3f3;
-            border-bottom: 1px solid #f3f3f3;
+            border-bottom: 1px solid #dbdbdb;
             display: flex;
             flex-direction: column;
             padding: 6px 12px 6px 12px;
         }
 
-        departure-item.selected {
+        departure-item > div:hover{
+            background-color: #fafafa;
+        }
+
+        departure-item.selected > div {
             background-color: white;
         }
 
         departure-item .header{
             padding-top: 10px;
             font-size: 16px;
+        }
+
+        departure-item .body{
+            overflow-y: hidden;
         }
 
         departure-item .body .period {
