[T241] Booking cancel & reactivate

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
@@ -66,6 +66,13 @@
 		<div class="row">
 			<booking-customer-editor [bookingOperationsPageData]="bookingOperationsPageData" (onCustomersChanged)="didChangeBooking($event)"></booking-customer-editor>
 		</div>
+		<hr/>
+		<div class="row">
+			<booking-reactivate [bookingOperationsPageData]="bookingOperationsPageData" (onBookingReactivate)="didChangeBooking($event)"></booking-reactivate>
+		</div>
+		<div class="row">
+			<booking-cancel [bookingOperationsPageData]="bookingOperationsPageData" (onBookingCancel)="didChangeBooking($event)"></booking-cancel>
+		</div>
 		
 	</div>
 </div>
